tests/paczka1/small_fuzzy/76060481.err
Error in line 8: A765 S102 24,0
Error in line 10: vXurm91vYzX A765 10,5
